--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 #root {
   margin: 0 auto;
   text-align: center;
-  background-color: rgb(247, 247, 247);
+  flex-grow: 1;
 }
 
 .header {
   display: flex;
+  background-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
