Added a Home page and styled it

--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -10,8 +10,15 @@
 
 .logoText {
   grid-column: 1 / 2;
-  font-size: 1.1rem;
   font-weight: 900;
+}
+
+.medium {
+  font-size: 1.1rem;
+}
+
+.large {
+  font-size: 3rem;
 }
 
 .logoImage {
