--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,28 @@
   margin: 0 auto;
   text-align: center;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   display: flex;
-  background-color: white;
+  background-color: var(--color-white);
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.content {
+  flex-grow: 1;
+}
+
+footer {
+  background-color: var(--color-900);
+  padding: 12px 6px;
+  margin-top: 64px;
+  text-align: left;
+}
+
+footer span {
+  color: var(--color-white);
+  font-size: 0.9rem;
 }
