--- a/src/components/ItemCard.module.css
+++ b/src/components/ItemCard.module.css
@@ -6,9 +6,9 @@
 
 .contentRoot {
   display: grid;
-  grid-template-rows: minmax(1rem, max-content);
   grid-template-columns: 200px auto;
-  gap: 18px;
+  grid-template-rows: auto auto;
+  column-gap: 12px;
   padding: 12px;
   text-align: left;
   min-height: 200px;
@@ -23,6 +23,7 @@
   grid-column: 2/3;
   max-height: fit-content;
   margin: 0;
+  font-size: 1.1rem;
 }
 
 .description {
@@ -30,23 +31,53 @@
   grid-column: 2/3;
   max-height: fit-content;
   margin: 0;
+  font-size: 0.9rem;
+  padding: 8px 0px;
 }
 
 .price {
   grid-column: 2/3;
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
 }
 
 .counter {
   grid-column: 2/3;
   margin: 0;
+  align-self: end;
 }
 
 .productImage {
   grid-column: 1/2;
-  grid-row: 1/4;
+  grid-row: 1/3;
   max-height: 200px;
   width: 200px;
   object-fit: contain;
+}
+
+.cardRoot.compact {
+  box-shadow: rgba(0, 0, 0, 0) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0) 0px 0px 0px 1px;
+}
+
+.compact .contentRoot {
+  grid-template-columns: 100px auto;
+  min-height: 100px;
+}
+
+.compact .title {
+  font-size: 1rem;
+}
+
+.compact .price {
+  font-weight: 500;
+  font-size: 0.9rem;
+}
+
+.compact .productImage {
+  max-height: 100px;
+  width: 100px;
 }
 
 .loading {
