--- a/src/components/ItemCard.module.css
+++ b/src/components/ItemCard.module.css
@@ -1,6 +1,6 @@
 .cardRoot {
+  display: flex;
   background-color: white;
-  margin: 18px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
@@ -46,14 +46,22 @@
   grid-column: 2/3;
   margin: 0;
   align-self: end;
+
+  flex-grow: 1;
+  display: flex;
+  align-items: flex-end;
 }
 
 .productImage {
   grid-column: 1/2;
   grid-row: 1/3;
-  max-height: 200px;
-  width: 200px;
+  height: 200px;
+  width: auto;
+  max-width: 100%;
   object-fit: contain;
+  display: block;
+  justify-self: center;
+  align-self: center;
 }
 
 .cardRoot.compact {
@@ -100,6 +108,46 @@
     background-position: 0% center;
   }
   to {
+    object-fit: contain;
     background-position: 100% center;
+  }
+}
+
+@media (max-width: 768px) {
+  .contentRoot {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 12px;
+  }
+
+  .productImage {
+    height: 100px;
+  }
+
+  .description {
+    font-size: 0.8rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    padding-bottom: 0px;
+    overflow-wrap: anywhere;
+  }
+
+  .title {
+    font-size: 0.9rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .price {
+    font-size: 0.9rem;
+  }
+
+  .counter {
+    align-self: center;
   }
 }
