--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -8,16 +8,19 @@
 .logoRoot {
   margin-top: 48px;
   width: 250px;
+  justify-content: center;
 }
 
 .legendRoot {
   margin: 48px auto;
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
+  /* display: grid;
   grid-template-columns: minmax(min-content, 250px) minmax(min-content, 250px);
-  grid-auto-flow: column;
+  grid-auto-flow: column; */
   justify-content: center;
   align-items: center;
-  column-gap: 48px;
+  gap: 48px;
 }
 
 .card {
@@ -25,7 +28,8 @@
   background-color: var(--color-white);
   padding: 24px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  height: 100%;
+  height: 250px;
+  width: 250px;
   align-content: center;
   color: var(--color-700);
 }
