--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -15,15 +15,16 @@
 
 span {
   color: var(--color-900);
-  font-weight: 800;
+  font-weight: 500;
+  margin-left: 8px;
 }
 
 .active {
-  color: var(--color-300);
+  font-weight: 800;
 }
 
 .active span {
-  color: var(--color-300);
+  font-weight: 800;
 }
 
 .root .navButton:last-child {
